Updated Telugu common content
git-svn-id: file:///srv/svn/publican/trunk@954 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/datadir/Common_Content/common/te-IN/Conventions.po
+++ b/publican/datadir/Common_Content/common/te-IN/Conventions.po
@@ -1,18 +1,18 @@
 # translation of Conventions.po to Telugu
-# Krishna Babu K <kkrothap@redhat.com>, 2007, 2008.
+# Krishna Babu K <kkrothap@redhat.com>, 2007, 2008, 2009.
 msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2009-12-01T23:44:40\n"
-"PO-Revision-Date: 2008-10-06 21:12+0530\n"
+"PO-Revision-Date: 2009-12-02 15:03+0530\n"
 "Last-Translator: Krishna Babu K <kkrothap@redhat.com>\n"
 "Language-Team: Telugu <en@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
-"Plural-Forms: nplurals=2; plural=(n!=1);\n"
+"Plural-Forms: nplurals=2; plural=(n!=1);\n\n"
 "\n"
 
 #. Tag: title
@@ -61,18 +61,18 @@ msgstr ""
 "విధానాలు, అవి ఆపాదించబడు సందర్భాలు, ఈ క్రింది విధంగా."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "<literal>Mono-spaced Bold</literal>"
-msgstr "మోనో-స్పేస్డ్‍ బోల్డ్‍"
+msgstr "<literal>మోనో-స్పేస్డ్‍ బోల్డ్</literal>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight keycaps and key combinations. For example:"
 msgstr ""
-"షెల్ ఆదేశాలు, ఫైలు పేరులు మరియు పాత్‌లు మొదలగునటువంటి సిస్టమ్ ఇన్‌పుట్‌ను వుద్దీపనం చేయుటకు "
-"వుపయోగించబడుతుంది. కీ కాప్స్‍‌ను మరియు కీ-కలయికలను వుద్దీపనం చేయుటకు వుపయోగించబడుతుంది. "
+"షెల్ ఆదేశాలు, ఫైలు పేరులు మరియు పాత్‌లతో కలుపుకొని సిస్టమ్ ఇన్‌పుట్‌ను వుద్దీపనం చేయుటకు "
+"వుపయోగించబడుతుంది. కీకాప్స్ మరియుు కీ-కలయికలన కూడాు వుద్దీపనం చేయుటకు వుపయోగించబడుతుంది. "
 "ఉదాహరణకు:"
 
 #. Tag: para
@@ -88,21 +88,21 @@ msgstr ""
 "ప్రామ్టువద్ద ప్రవేశపెట్టి <keycap>Enter</keycap> వత్తండి. "
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "The above includes a file name, a shell command and a keycap, all presented "
 "in mono-spaced bold and all distinguishable thanks to context."
 msgstr ""
-"పైన చేర్చిన ఫైలు పేరు, షెల్ ఆదేశము మరియు కీ కాప్, అన్ని మోనో-స్పెస్డ్‍ బోల్డునందు ప్రస్పుటించబడతాయి మరియు "
-"సందర్భానుసారంగా."
+"పైనది ఫైలు నామమును, షెల్ ఆదేశమును మరియు కీకాప్‌ను చేర్చుతుంది, మరియు అన్ని మోనో-స్పేస్డ్ బోల్డునందు "
+"మరియు ధన్యవాదములను తెలుపు సందర్భంలోను సమర్పించబడతాయి."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Key combinations can be distinguished from keycaps by the hyphen connecting "
 "each part of a key combination. For example:"
 msgstr ""
-"కీ-కలయిక యొక్క ప్రతిభాగమును హైఫన్‌తో అనుసంధానించి కీ కాప్స్‍ నుండి కీ-కలయికలను స్పష్టపరచవచ్చు. "
+"కీ కలయిక యొక్క ప్రతిభాగమును హైఫన్‌తో అనుసంధానించి కీ కాప్స్ నుండి కీ కలయికలను స్పష్టపరచగలము. "
 "ఉదాహరణకు:"
 
 #. Tag: para
@@ -124,25 +124,24 @@ msgstr ""
 "keycombo>ను వత్తుము."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "The first paragraph highlights the particular keycap to press. The second "
 "highlights two key combinations (each a set of three keycaps with each set "
 "pressed simultaneously)."
 msgstr ""
-"మొదటి వాఖ్యము పలానా కీ కాప్ వత్తవలెనని యెత్తిచూపుతుంది. ఒకదాని తర్వాత వొకటి వత్తవలసిన, మూడు కీ కాప్‌ల "
-"రెండు సమితులను రెండవది యెత్తిచూపుతుంది."
+"మొదటి పరిచ్ఛేదము ఏ కీకాప్‌ను వత్తాలో వుద్ధీపనం చేయును. రెండవది రెండు కీ కలయికలను (ప్రతి సమితి మూడు "
+"కీకాప్‌లతో ప్రతి సమితి వొకదాని తర్వాత వొకటి వత్తాలి) వుద్దీపనంచేయును."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "If source code is discussed, class names, methods, functions, variable names "
 "and returned values mentioned within a paragraph will be presented as above, "
 "in <literal>mono-spaced bold</literal>. For example:"
 msgstr ""
-"ఒకవేళ సోర్సుకొడ్ చర్చించవలసివస్తే, క్లాస్ నేమ్‌లు, మెథడ్స్‍, ఫంక్షన్స్‍, వేరియబుల్ నేమ్స్‍ మరియు రిటర్న్‍ "
-"వాల్యూస్‌ను పైనయిచ్చిన విధంగా పరిచ్ఛేదము లోపల తెలుపవలెను, <literal>Mono-spaced Bold</"
-"literal>లో. ఉదాహరణకు:"
+"ఒకవేళ సోర్సుకొడ్ చర్చించితే, పరిచ్ఛేదము లోపల తెలిపిన క్లాస్ నేమ్‌లు, మెథడ్స్, ఫంక్షన్స్, వేరియబుల్ నేమ్స్ మరియు రిటర్న్ "
+"వాల్యూస్‌ను పైన చూపిన విధంగా, <literal>Mono-spaced Bold</literal>లో సమర్పించబడతాయి. ఉదాహరణకు:"
 
 #. Tag: para
 #, no-c-format
@@ -159,21 +158,20 @@ msgstr ""
 #. Tag: para
 #, no-c-format
 msgid "<application>Proportional Bold</application>"
-msgstr ""
+msgstr "<application>ప్రొపోర్షనల్ బోల్డ్</application>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "This denotes words or phrases encountered on a system, including application "
 "names; dialog box text; labeled buttons; check-box and radio button labels; "
 "menu titles and sub-menu titles. For example:"
 msgstr ""
-"యిది సిస్టమ్‌నందు యెదురగు అనువర్తనపు నామములు; డైలాగ్ బాక్స్‍ పాఠ్యము; లేబుల్ బటన్స్‍; చెక్-బాక్స్‍ మరియు "
-"రేడియో బటన్ లేబుల్స్‍; మెనూ శీర్షికలు మరియు ఉప-మెనూ శీర్షికల పదములు లేదా మాటలను సూచిస్తుంది. "
+"ఇది అనువర్తనపు నామములు; డైలాగ్ బాక్స్ పాఠ్యము; లేబుల్ బటన్స్; చెక్-బాక్స్ మరియు రేడియో బటన్ లేబుల్స్; మెనూ శీర్షికలు మరియు ఉప-మెనూ శీర్షికలతో కలుపుకొని సిస్టమ్‌నందు యెదురగు పదములు లేదా మాటలను సూచిస్తుంది. "
 "ఉదాహరణకు:"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Choose <menuchoice><guimenu>System</guimenu><guisubmenu>Preferences</"
 "guisubmenu><guimenuitem>Mouse</guimenuitem></menuchoice> from the main menu "
@@ -184,13 +182,12 @@ msgid ""
 "for use in the left hand)."
 msgstr ""
 "<application>మౌస్ అభీష్టాలు</application>ను ముఖ్య మోనూబార్‌నుండి ఆరంభించుటకు "
-"<guimenu>సిస్టమ్ > అభీష్టాలు > మౌస్</guimenu>ను యెంచుకొనుము. ప్రాధమిక మౌస్ బటన్‌ను యెడమనుండి "
-"కుడికి మార్చుటకు (యెడమచేతి వాటము కొరకు) <guilabel>Buttons</guilabel> టాబ్ నందలి,  "
-"<guilabel>ఎడమ-చేతి మౌస్</guilabel> చెక్‌బాక్స్‍‌ను వత్తుము మరియు  <guibutton>మూయి</"
+"<menuchoice><guimenu>సిస్టమ్</guimenu><guisubmenu>అభీష్టాలు</"
+"guisubmenu><guimenuitem>మౌస్‌</guimenuitem></menuchoice>ను యెంచుకొనుము. ప్రాధమిక మౌస్ బటన్‌ను యెడమనుండి కుడికి మార్చుటకు (యెడమచేతి వాటము కొరకు) <guilabel>బటన్స్</guilabel> టాబ్ నందలి, <guilabel>ఎడమ-చేతి మౌస్</guilabel> చెక్‌బాక్స్‍‌ను వత్తి మరియు <guibutton>మూయి</"
 "guibutton>ను వత్తుము."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "To insert a special character into a <application>gedit</application> file, "
 "choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</"
@@ -206,19 +203,20 @@ msgid ""
 "document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</"
 "guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr ""
-"<application>gedit</application> ఫైలులోనికి ప్రత్యేక అక్షరమును ప్రవేశపెట్టుటకు,  ముఖ్య "
-"మెనూ బార్‌నుండి  <guimenu>అనువర్తనములు > సహాయకాలు > అక్షర పటము</guimenu>ను యెంచుకొనుము."
-"తరువాత,  <application>అక్షర పటము</application> మెనూబార్ నుండి  <guimenu>శోధించు > "
-"వెతుకు&hellip;</guimenu>ను యెంచుకొనుము, అక్షరము యొక్క పేరును<guilabel>శోధన</"
+"<application>gedit</application> ఫైలులోనికి ప్రత్యేక అక్షరమును ప్రవేశపెట్టుటకు,  ముఖ్య మెనూ బార్‌నుండి <menuchoice><guimenu>అనువర్తనములు</guimenu><guisubmenu>సహాయకాలు</"
+"guisubmenu><guimenuitem>అక్షర పఠము</guimenuitem></menuchoice>ను యెంచుకొనుము."
+"తరువాత,  <application>అక్షర పఠము</application> మెనూబార్ నుండి  <menuchoice><guimenu>వెతుకు</guimenu><guimenuitem>కనుగొనుము&hellip;</guimenu"
+"item></menuchoice> ను యెంచుకొనుము, అక్షరము యొక్క పేరును<guilabel>శోధన</"
 "guilabel>క్షేత్రమునందు ప్రవేశపెట్టుము మరియు <guibutton>తరువాత</guibutton> నొక్కుము. మీరు "
 "యెంపికచేసిన అక్షరము <guilabel>అక్షర పట్టిక</guilabel> నందు వుద్దీపనము చేయబడుతుంది. "
 "<guilabel>నకలు తీయుటకు పాఠ్యము</guilabel> క్షేత్రమునందు వుంచుటకు వుద్దీపనము చేసిన "
 "అక్షరమును రెండుసార్లు నొక్కుము తరువాత <guibutton>నకలుతీయి</guibutton> నొక్కుము. "
 "ఇప్పుడుము మరలా మీపత్రమునకు వెళ్ళి <application>gedit</application> మెనూ బార్‌నుండి "
-"<guimenu>సరిచేయు > అతికించు</guimenu>యెంచుకొనుము."
+"<menuchoice><guimenu>సరిచూచు</guimenu><guimenuitem>అతికించు</"
+"guimenuitem></menuchoice>యెంచుకొనుము."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "The above text includes application names; system-wide menu names and items; "
 "application-specific menu names; and buttons and text found within a GUI "
@@ -227,7 +225,7 @@ msgid ""
 msgstr ""
 "పై పాఠ్యము అనువర్తనము పేరులను; సిస్టమ్-తరహా మెనూ పేరులను మరియు అంశములను; అనువర్తనము-తీరు "
 "మెనూ పేరులను; మరియు బటన్లను మరియు GUI ఇంటర్ఫేస్‌నందు కనిపించు పాఠ్యమును కలిగివుంటుంది, అన్నీ "
-"ప్రొపోర్షనల్ బోల్డ్‍ మరియు సందర్భానుసారం వుంటాయి."
+"ప్రొపోర్షనల్ బోల్డ్ నందు వుంటాయి మరియు సందర్భానుసారం వుంటాయి."
 
 #. Tag: para
 #, no-c-format
@@ -240,14 +238,14 @@ msgstr ""
 "<application><replaceable>ప్రొపోషనల్ బోల్డ్‍ ఇటాలిక్</replaceable></application>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Whether mono-spaced bold or proportional bold, the addition of italics "
 "indicates replaceable or variable text. Italics denotes text you do not "
 "input literally or displayed text that changes depending on circumstance. "
 "For example:"
 msgstr ""
-"మోనో-స్పేస్డ్‍ బోల్డ్‍ లేదా ప్రొపోషనల్ బోల్డ్‍ యేదైనా, ఇటాలిక్‌లు అనునవి తిరిగివుంచగల లేదా వేరియబుల్ పాఠ్యమును "
+"మోనో-స్పేస్డ్ బోల్డ్ లేదా ప్రొపోషనల్ బోల్డ్ యేదైనా, ఇటాలిక్‌లు జతచేసివుంటే తిరిగివుంచగల లేదా వేరియబుల్ పాఠ్యమును "
 "సూచిస్తాయి.  మీరు యధాతధంగా ప్రవేశపెట్టలేని లేదా సందర్భానుసారం మారే పాఠ్యమును ఇటాలిక్స్‍ సూచిస్తాయి. ఉదాహరణకు:"
 
 #. Tag: para
@@ -313,7 +311,7 @@ msgstr ""
 #. Tag: para
 #, no-c-format
 msgid "Publican is a <firstterm>DocBook</firstterm> publishing system."
-msgstr ""
+msgstr "పబ్లికన్ అనునది <firstterm>DocBook</firstterm> ప్రచురణ వ్యవస్థ."
 
 #. Tag: title
 #, no-c-format
@@ -321,14 +319,16 @@ msgid "Pull-quote Conventions"
 msgstr "పుల్-కోట్ విధానాలు"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Terminal output and source code listings are set off visually from the "
 "surrounding text."
-msgstr "రెండు, సాదారణ బహుళ-వరుస, డాటా టైప్స్‍ చూట్టూవున్న పాఠ్యమునుండి దృశ్యరూపంగా ఆఫ్ చేయబడినవి."
+msgstr ""
+"టెర్మినల్ అవుట్‌పుట్ మరియు సోర్స్ కోడ్ జాబితాలు అనునవి చుట్టూవుంచబడు పాఠ్యమునుండి "
+"దృశ్యరీత్యా ఆఫ్ చేయబడినవి."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Output sent to a terminal is set in <computeroutput>mono-spaced roman</"
 "computeroutput> and presented thus:"
@@ -337,13 +337,13 @@ msgstr ""
 "అమర్చబడివుంది మరియు అలానే ప్రస్పుటిస్తోంది:"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Source-code listings are also set in <computeroutput>mono-spaced roman</"
 "computeroutput> but add syntax highlighting as follows:"
 msgstr ""
 "సోర్సు-కోడ్ జాబితాలు కూడా <computeroutput>Mono-spaced Roman</computeroutput> నందు "
-"అమర్చబడినవి అయితే ఈక్రిందివింధంగా ప్రస్పుటిస్తున్నాయి మరియు వుద్దీపనం చేయబడ్డాయి:"
+"అమర్చబడినవి అయితే జతచేయు సిన్టాక్స్ ఈక్రిందివింధంగా వుద్దీపనం చేయబడుతుంది:"
 
 #. Tag: title
 #, no-c-format
@@ -365,7 +365,7 @@ msgid "Note"
 msgstr "గమనిక"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Notes are tips, shortcuts or alternative approaches to the task at hand. "
 "Ignoring a note should have no negative consequences, but you might miss out "
@@ -381,7 +381,7 @@ msgid "Important"
 msgstr "ముఖ్యమైన"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
@@ -398,95 +398,9 @@ msgid "Warning"
 msgstr "హెచ్చరిక"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Warnings should not be ignored. Ignoring warnings will most likely cause "
 "data loss."
-msgstr ""
-"హెచ్చరికను పట్టించుకొనకుండా వుండకూడదు. హెచ్చరికలను పట్టించుకొనక పోవుటవలన డాటానష్టం సంభవిస్తుంది."
+msgstr "హెచ్చరికలను పట్టించుకొనకుండా వుండకూడదు. హెచ్చరికలను పట్టించుకొనక పోవుటవలన డాటానష్టం సంభవిస్తుంది."
 
-#, fuzzy
-#~ msgid ""
-#~ "Note the <guimenu>&#62;</guimenu> shorthand used to indicate traversal "
-#~ "through a menu and its sub-menus. This avoids difficult-to-follow "
-#~ "phrasing such as &#39;Select <guimenuitem>Mouse</guimenuitem> from the "
-#~ "<guimenu>Preferences</guimenu> sub-menu in the <guimenu>System</guimenu> "
-#~ "menu of the main menu bar&#39;."
-#~ msgstr ""
-#~ "గుర్తు <guimenu>></guimenu> అనునది మెనూ మరియు దాని ఉప-మెనూల మద్య సంచరించుటకు "
-#~ "సూచనలిస్తుంది. '<guimenuitem>మౌస్‌</guimenuitem>ను ముఖ్య మెనూబార్ యొక్క "
-#~ "<guimenu>సిస్టమ్</guimenu> మెనూనందలి వుప-మెనూ <guimenu>ఆభీష్టాలు</guimenu> నుండి "
-#~ "యెంచుకొనుము' యిటువంటి ఆచరణకు-కష్టమగు అనుసరింపును తొలగించుటకు  పైది వుపయోగపడుతుంది."
-
-#~ msgid ""
-#~ "When the Apache HTTP Server accepts requests, it dispatches child "
-#~ "processes or threads to handle them. This group of child processes or "
-#~ "threads is known as a <firstterm>server-pool</firstterm>. Under Apache "
-#~ "HTTP Server 2.0, the responsibility for creating and maintaining these "
-#~ "server-pools has been abstracted to a group of modules called "
-#~ "<firstterm>Multi-Processing Modules</firstterm> (<firstterm>MPMs</"
-#~ "firstterm>). Unlike other modules, only one module from the MPM group can "
-#~ "be loaded by the Apache HTTP Server."
-#~ msgstr ""
-#~ "Apache HTTP సేవిక అభ్యర్దనలను ఆమోదించినప్పుడు, వాటిని సంభాలించుటకు అది చైల్డు కార్యక్రమాలను "
-#~ "మరియు తంత్రులను విడుదలచేస్తుంది. ఈచైల్డు కార్యక్రమముల మరియు తంత్రుల సమూహమే "
-#~ "<firstterm>server-pool</firstterm>. Apache HTTP Server 2.0 నందు,  ఈ "
-#~ "server-poolsను సృష్టించు మరియు నిర్వహించు భాద్యతను <firstterm>Multi-Processing "
-#~ "Modules</firstterm> (<firstterm>MPMs</firstterm>) అనిపిలువబడే మాడ్యూల్స్‍‌ సమూహంకు "
-#~ "సంక్షిప్తంచేయబడింది. ఇతర మాడ్యూల్సు వలేకాక, వొక మాడ్యూల్ మాత్రమే MPM సమూహంనుండి Apache HTTP "
-#~ "Server చేత లోడ్‌చేయబడుతుంది."
-
-#~ msgid "Proportional Bold"
-#~ msgstr "ప్రోపోషనల్ బోల్డ్‍"
-
-#~ msgid ""
-#~ "books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
-#~ "books_tests  Desktop1  downloads      images  notes  scripts  svgs"
-#~ msgstr ""
-#~ "books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
-#~ "books_tests  Desktop1  downloads      images  notes  scripts  svgs"
-
-#~ msgid ""
-#~ "package org.jboss.book.jca.ex1;\n"
-#~ "\n"
-#~ "import javax.naming.InitialContext;\n"
-#~ "\n"
-#~ "public class ExClient\n"
-#~ "{\n"
-#~ "   public static void main(String args[]) \n"
-#~ "       throws Exception\n"
-#~ "   {\n"
-#~ "      InitialContext iniCtx = new InitialContext();\n"
-#~ "      Object         ref    = iniCtx.lookup(\"EchoBean\");\n"
-#~ "      EchoHome       home   = (EchoHome) ref;\n"
-#~ "      Echo           echo   = home.create();\n"
-#~ "\n"
-#~ "      System.out.println(\"Created Echo\");\n"
-#~ "\n"
-#~ "      System.out.println(\"Echo.echo('Hello') = \" + echo.echo(\"Hello"
-#~ "\"));\n"
-#~ "   }\n"
-#~ "   \n"
-#~ "}"
-#~ msgstr ""
-#~ "package org.jboss.book.jca.ex1;\n"
-#~ "\n"
-#~ "import javax.naming.InitialContext;\n"
-#~ "\n"
-#~ "public class ExClient\n"
-#~ "{\n"
-#~ "   public static void main(String args[]) \n"
-#~ "       throws Exception\n"
-#~ "   {\n"
-#~ "      InitialContext iniCtx = new InitialContext();\n"
-#~ "      Object         ref    = iniCtx.lookup(\"EchoBean\");\n"
-#~ "      EchoHome       home   = (EchoHome) ref;\n"
-#~ "      Echo           echo   = home.create();\n"
-#~ "\n"
-#~ "      System.out.println(\"Created Echo\");\n"
-#~ "\n"
-#~ "      System.out.println(\"Echo.echo('Hello') = \" + echo.echo(\"Hello"
-#~ "\"));\n"
-#~ "   }\n"
-#~ "   \n"
-#~ "}"
