correct link to bugzilla.redhat.com -- BZ#553528
git-svn-id: file:///srv/svn/publican/trunk@959 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-redhat/bn-IN/Feedback.po
+++ b/publican-redhat/bn-IN/Feedback.po
@@ -29,12 +29,10 @@ msgstr "এই সহায়ক-পুস্তিকা সম্বন্ধে
 msgid ""
 "If you find a typographical error in this manual, or if you have thought of "
 "a way to make this manual better, we would love to hear from you! Please "
-"submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/"
-"bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product "
+"submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product "
 "<application>&PRODUCT;.</application>"
 msgstr ""
-"যদি আপনি কোনো ত্রুটি লক্ষ্য করেন অথবা এই পুস্তিকাটি আরো উন্নত করার কোনো প্রস্তাব আপনি দিতে ইচ্ছুক থাকলে, আমাদের নির্দ্বিধায় তা জানান।! অনুগ্রহ করে <application>&PRODUCT;.</application> উৎপাদনের জন্য Bugzilla-তে সমস্ত বিবরণসহ একটি রিপোর্ট দায়ের করুন: <ulink url=\"http://bugzilla.redhat.com/"
-"bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink>।"
+"যদি আপনি কোনো ত্রুটি লক্ষ্য করেন অথবা এই পুস্তিকাটি আরো উন্নত করার কোনো প্রস্তাব আপনি দিতে ইচ্ছুক থাকলে, আমাদের নির্দ্বিধায় তা জানান।! অনুগ্রহ করে <application>&PRODUCT;.</application> উৎপাদনের জন্য Bugzilla-তে সমস্ত বিবরণসহ একটি রিপোর্ট দায়ের করুন: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink>।"
 
 #: Feedback.xml:16(para)
 msgid ""
