--- a/publican-redhat/fr-FR/Feedback.po
+++ b/publican-redhat/fr-FR/Feedback.po
@@ -28,14 +28,12 @@ msgstr "coordonnées pour ce manuel"
 msgid ""
 "If you find a typographical error in this manual, or if you have thought of "
 "a way to make this manual better, we would love to hear from you! Please "
-"submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/"
-"bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product "
+"submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product "
 "<application>&PRODUCT;.</application>"
 msgstr ""
 "Si vous trouvez des fautes de frappe ou si vous avez des suggestions pour "
 "améliorer ce manuel, n'hésitez surtout pas à nous en faire part&nbsp;! "
-"Veuillez envoyer vos remarques par l'entremise de Bugzilla (<ulink url=\"http://bugzilla.redhat.com/"
-"bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink>) "
+"Veuillez envoyer vos remarques par l'entremise de Bugzilla (<ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink>) "
 "pour le produit <application>&PRODUCT;.</application>"
 
 #: Feedback.xml:16(para)
