--- a/publican-redhat/gu-IN/Feedback.po
+++ b/publican-redhat/gu-IN/Feedback.po
@@ -29,10 +29,9 @@ msgstr "આ માર્ગદર્શિકા માટેની સંપર
 msgid ""
 "If you find a typographical error in this manual, or if you have thought of "
 "a way to make this manual better, we would love to hear from you! Please "
-"submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/"
-"bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product "
+"submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product "
 "<application>&PRODUCT;.</application>"
-msgstr "જો તમને આ માર્ગદર્શિકામાં લખાણને લગતી ભૂલ મળે, કે જો તમે આ માર્ગદર્શિકાને વધુ સારી બનાવવાનો વિચાર આવે, તો અમને તમારા તરફથી સાંભળવામાં ખુશી થશે! મહેરબાની કરીને બગઝીલ્લામાં અહેવાલ જમા કરો: <ulink url=\"http://bugzilla.redhat.com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> આગળ <application>&PRODUCT;.</application> ઉત્પાદન વિરુદ્ધ"
+msgstr "જો તમને આ માર્ગદર્શિકામાં લખાણને લગતી ભૂલ મળે, કે જો તમે આ માર્ગદર્શિકાને વધુ સારી બનાવવાનો વિચાર આવે, તો અમને તમારા તરફથી સાંભળવામાં ખુશી થશે! મહેરબાની કરીને બગઝીલ્લામાં અહેવાલ જમા કરો: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> આગળ <application>&PRODUCT;.</application> ઉત્પાદન વિરુદ્ધ"
 
 #: Feedback.xml:16(para)
 msgid ""
