--- a/publican-redhat/ko-KR/Feedback.po
+++ b/publican-redhat/ko-KR/Feedback.po
@@ -28,12 +28,10 @@ msgstr "연락처"
 msgid ""
 "If you find a typographical error in this manual, or if you have thought of "
 "a way to make this manual better, we would love to hear from you! Please "
-"submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/"
-"bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product "
+"submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product "
 "<application>&PRODUCT;.</application>"
 msgstr ""
-"문서 내용 개선을 위한 제안이 있거나 오자를 발견했을 경우 언제든지 알려 주시기 바랍니다. <application>&PRODUCT;.</application>에 대한 리포트를 버그질라(Bugzilla)로 제출해 주시면 됩니다: <ulink url=\"http://bugzilla.redhat.com/"
-"bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink>"
+"문서 내용 개선을 위한 제안이 있거나 오자를 발견했을 경우 언제든지 알려 주시기 바랍니다. <application>&PRODUCT;.</application>에 대한 리포트를 버그질라(Bugzilla)로 제출해 주시면 됩니다: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink>"
 
 #: Feedback.xml:16(para)
 msgid ""
