--- a/publican-redhat/mr-IN/Feedback.po
+++ b/publican-redhat/mr-IN/Feedback.po
@@ -29,12 +29,10 @@ msgstr "ह्या पुस्तिकेकरीता संपर्क 
 msgid ""
 "If you find a typographical error in this manual, or if you have thought of "
 "a way to make this manual better, we would love to hear from you! Please "
-"submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/"
-"bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product "
+"submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product "
 "<application>&PRODUCT;.</application>"
 msgstr ""
-"टायपोग्राफी संबंधी त्रुटी आढळल्यास, किंवा ह्या पुस्तिकेला आणखी चांगले बनविण्याकरीता, आपले विचार आमच्यापर्यंत पोहचवा! कृपया अहवाल Bugzilla: <ulink url=\"http://bugzilla.redhat.com/"
-"bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> येथे उत्पादना <application>&PRODUCT;.</application> विरूद्ध करा"
+"टायपोग्राफी संबंधी त्रुटी आढळल्यास, किंवा ह्या पुस्तिकेला आणखी चांगले बनविण्याकरीता, आपले विचार आमच्यापर्यंत पोहचवा! कृपया अहवाल Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> येथे उत्पादना <application>&PRODUCT;.</application> विरूद्ध करा"
 
 #: Feedback.xml:16(para)
 msgid ""
