--- a/publican-redhat/ta-IN/Feedback.po
+++ b/publican-redhat/ta-IN/Feedback.po
@@ -30,11 +30,10 @@ msgstr "இந்த கையேட்டின் தொடர்பு தக
 msgid ""
 "If you find a typographical error in this manual, or if you have thought of "
 "a way to make this manual better, we would love to hear from you! Please "
-"submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/"
-"bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product "
+"submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product "
 "<application>&PRODUCT;.</application>"
 msgstr ""
-"நீங்கள் இந்த கையேட்டில் பிழைகளை பார்த்தால் அல்லது இந்த கையேட்டை மேலும் மெருகேற்ற நினைத்தால், நாங்கள் உங்களிடமிருந்து கருத்து கேட்க தயாராக இருக்கிறோம். அவ்வாறு இருந்தால் உங்கள் அறிக்கையை பக்ஸில்லாவில்: <ulink url=\"http://bugzilla.redhat.com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> இந்த தயாரிப்பில்"
+"நீங்கள் இந்த கையேட்டில் பிழைகளை பார்த்தால் அல்லது இந்த கையேட்டை மேலும் மெருகேற்ற நினைத்தால், நாங்கள் உங்களிடமிருந்து கருத்து கேட்க தயாராக இருக்கிறோம். அவ்வாறு இருந்தால் உங்கள் அறிக்கையை பக்ஸில்லாவில்: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> இந்த தயாரிப்பில்"
 "<application>&PRODUCT;.</application> சமர்ப்பிக்கவும்"
 
 #: Feedback.xml:16(para)
