--- a/publican-redhat/zh-TW/Feedback.po
+++ b/publican-redhat/zh-TW/Feedback.po
@@ -28,12 +28,10 @@ msgstr "本指南的連絡人資訊"
 msgid ""
 "If you find a typographical error in this manual, or if you have thought of "
 "a way to make this manual better, we would love to hear from you! Please "
-"submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/"
-"bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product "
+"submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product "
 "<application>&PRODUCT;.</application>"
 msgstr ""
-"若您在本指南中發現印刷上的錯誤，或有讓本指南改進的方式，我們將誠摯歡迎您和我們取得聯繫！請在 Bugzilla 中對於 <application>&PRODUCT;.</application> 這個產品提交您的報表：<ulink url=\"http://bugzilla.redhat.com/"
-"bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink>。"
+"若您在本指南中發現印刷上的錯誤，或有讓本指南改進的方式，我們將誠摯歡迎您和我們取得聯繫！請在 Bugzilla 中對於 <application>&PRODUCT;.</application> 這個產品提交您的報表：<ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink>。"
 
 #: Feedback.xml:16(para)
 msgid ""
