--- a/publican-redhat/de-DE/Feedback.po
+++ b/publican-redhat/de-DE/Feedback.po
@@ -28,15 +28,13 @@ msgstr "Kontaktinformationen für dieses Handbuch"
 msgid ""
 "If you find a typographical error in this manual, or if you have thought of "
 "a way to make this manual better, we would love to hear from you! Please "
-"submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/"
-"bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product "
+"submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product "
 "<application>&PRODUCT;.</application>"
 msgstr ""
 "Wenn Sie einen Fehler in diesem Handbuch finden oder eine Idee haben, wie "
 "dieses verbessert werden könnte, freuen wir uns über Ihr Feedback! Reichen "
 "Sie einen Fehlerbericht für die Komponente <application>&PRODUCT;.</"
-"application> in Bugzilla unter <ulink url=\"http://bugzilla.redhat.com/"
-"bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> ein."
+"application> in Bugzilla unter <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> ein."
 
 #: Feedback.xml:16(para)
 msgid ""
