--- a/publican-redhat/ja-JP/Feedback.po
+++ b/publican-redhat/ja-JP/Feedback.po
@@ -28,14 +28,12 @@ msgstr "このドキュメント用の連絡先情報"
 msgid ""
 "If you find a typographical error in this manual, or if you have thought of "
 "a way to make this manual better, we would love to hear from you! Please "
-"submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/"
-"bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product "
+"submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product "
 "<application>&PRODUCT;.</application>"
 msgstr ""
 "このドキュメント内で誤字/脱字を発見された場合、又はこのドキュメントを改善する案をお持ちの "
 "場合は、弊社までご連絡下さい。該当する製品 <application>&PRODUCT;.</application> に対して "
-"Bugzilla: <ulink url=\"http://bugzilla.redhat.com/"
-"bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> に報告を提出してください。"
+"Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> に報告を提出してください。"
 
 #: Feedback.xml:16(para)
 msgid ""
