--- a/publican-redhat/kn-IN/Feedback.po
+++ b/publican-redhat/kn-IN/Feedback.po
@@ -29,12 +29,11 @@ msgstr "ಈ ಕೈಪಿಡಿಗಾಗಿ ಸಂಪರ್ಕ ಮಾಹಿತಿ
 msgid ""
 "If you find a typographical error in this manual, or if you have thought of "
 "a way to make this manual better, we would love to hear from you! Please "
-"submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/"
-"bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product "
+"submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product "
 "<application>&PRODUCT;.</application>"
 msgstr ""
 "ಈ ಕೈಪಿಡಿಯಲ್ಲಿ ನಿಮಗೆ ಬೆರಳಚ್ಚು ದೋಷ ಕಂಡು ಬಂದರೆ, ಅಥವ ಈ ಕೈಪಿಡಿಯನ್ನು ಇನ್ನಷ್ಟು ಉತ್ತಮಗೊಳಿಸಲು "
-"ನಿಮ್ಮಲ್ಲಿ ಸಲಹೆಗಳಿದ್ದರೆ, ನಾವು ಅದನ್ನು ತಿಳಿಯಲು ಉತ್ಸುಕರಾಗಿದ್ದೇವೆ! ದಯವಿಟ್ಟು ಬಗ್-ಝಿಲ್ಲಾದಲ್ಲಿ : <ulink url=\"http://bugzilla.redhat.com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> "
+"ನಿಮ್ಮಲ್ಲಿ ಸಲಹೆಗಳಿದ್ದರೆ, ನಾವು ಅದನ್ನು ತಿಳಿಯಲು ಉತ್ಸುಕರಾಗಿದ್ದೇವೆ! ದಯವಿಟ್ಟು ಬಗ್-ಝಿಲ್ಲಾದಲ್ಲಿ : <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> "
 "ನಲ್ಲಿನ <application>&PRODUCT;.</application> ನಲ್ಲಿ ಒಂದು ವರದಿಯನ್ನು ಸಲ್ಲಿಸಿ."
 
 #: Feedback.xml:16(para)
