--- a/publican-redhat/pt-BR/Feedback.po
+++ b/publican-redhat/pt-BR/Feedback.po
@@ -28,12 +28,10 @@ msgstr "contato de informação para este manual"
 msgid ""
 "If you find a typographical error in this manual, or if you have thought of "
 "a way to make this manual better, we would love to hear from you! Please "
-"submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/"
-"bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product "
+"submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product "
 "<application>&PRODUCT;.</application>"
 msgstr ""
-"Se você encontrar erro ortográfico neste manual, ou se você tem uma sugestão para melhoramento deste manual, nós gostaríamos muito de ouvir sua opinião! Por favor submita um relatório em Bugzilla:<ulink url=\"http://bugzilla.redhat.com/ "
-"bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> contra o produto <application>&PRODUCT;.</application>."
+"Se você encontrar erro ortográfico neste manual, ou se você tem uma sugestão para melhoramento deste manual, nós gostaríamos muito de ouvir sua opinião! Por favor submita um relatório em Bugzilla:<ulink url=\"http://bugzilla.redhat.com/ \">http://bugzilla.redhat.com/</ulink> contra o produto <application>&PRODUCT;.</application>."
 
 #: Feedback.xml:16(para)
 msgid ""
