--- a/publican-redhat/zh-CN/Feedback.po
+++ b/publican-redhat/zh-CN/Feedback.po
@@ -28,12 +28,10 @@ msgstr "本手册的联系人"
 msgid ""
 "If you find a typographical error in this manual, or if you have thought of "
 "a way to make this manual better, we would love to hear from you! Please "
-"submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/"
-"bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product "
+"submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product "
 "<application>&PRODUCT;.</application>"
 msgstr ""
-"如​果​你​发​现​了​排​印​错​误​或​者​有​改​进​本​文​档​的​建​议​，我​们​希​望​能​听​取​你​的​意​见​。​请​在 Bugzilla <ulink url=\"http://bugzilla.redhat.com/"
-"bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> 里​提​交​关​于产品 <application>&PRODUCT;.</application> 的​报​告​。​"
+"如​果​你​发​现​了​排​印​错​误​或​者​有​改​进​本​文​档​的​建​议​，我​们​希​望​能​听​取​你​的​意​见​。​请​在 Bugzilla <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> 里​提​交​关​于产品 <application>&PRODUCT;.</application> 的​报​告​。​"
 
 #: Feedback.xml:16(para)
 msgid ""
