--- a/publican-redhat/ru-RU/Feedback.po
+++ b/publican-redhat/ru-RU/Feedback.po
@@ -1,49 +1,71 @@
+# Russian Translation.
+# Alexey Vasyukov <vasyukov@vdel.com>, 2009.
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: Feedback\n"
-"POT-Creation-Date: 2007-10-10 11:15+1000\n"
-"PO-Revision-Date: 2007-04-05 09:29+1000\n"
-"Last-Translator: Automatically generated\n"
-"Language-Team: none\n"
+"Project-Id-Version: 1.0\n"
+"Report-Msgid-Bugs-To: http://bugs.kde.org\n"
+"POT-Creation-Date: 2009-02-24 03:17+0000\n"
+"PO-Revision-Date: 2009-03-09 18:42+0300\n"
+"Last-Translator: Alexey Vasyukov <vasyukov@gmail.com>\n"
+"Language-Team: Russian Fedora Team <fedora-localization@www.russianfedora.ru>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: Feedback.xml:6(title)
+#. Tag: title
+#: Feedback.xml:6
+#, no-c-format
 msgid "We Need Feedback!"
-msgstr ""
+msgstr "Нам нужны Ваши отзывы!"
 
-#: Feedback.xml:8(primary)
+#. Tag: primary
+#: Feedback.xml:8
+#, no-c-format
 msgid "feedback"
-msgstr ""
+msgstr "обратная связь"
 
-#: Feedback.xml:9(secondary)
+#. Tag: secondary
+#: Feedback.xml:9
+#, no-c-format
 msgid "contact information for this manual"
-msgstr ""
+msgstr "контактная информация по этому руководству"
 
-#: Feedback.xml:11(para)
+#. Tag: para
+#: Feedback.xml:11
+#, no-c-format
 msgid ""
 "If you find a typographical error in this manual, or if you have thought of "
 "a way to make this manual better, we would love to hear from you! Please "
-"submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product "
+"submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/"
+"bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product "
 "<application>&PRODUCT;.</application>"
 msgstr ""
+"Если Вы нашли опечатку в этом руководстве, или у Вас есть идеи, как его "
+"улучшить, мы будем рады выслушать Вас! Пожалуйста, оставьте сообщение в "
+"Bugzilla по адресу <ulink url=\"http://bugzilla.redhat.com/bugzilla/"
+"\">http://bugzilla.redhat.com/bugzilla/</ulink>, выбрав продукт "
+"<application>&PRODUCT;.</application>"
 
-#: Feedback.xml:16(para)
+#. Tag: para
+#: Feedback.xml:16
+#, no-c-format
 msgid ""
 "When submitting a bug report, be sure to mention the manual's identifier: "
 "<citetitle>&BOOKID;</citetitle>"
 msgstr ""
+"Убедитесь, что в сообщении об ошибке Вы указали идентификатор данного "
+"руководства: <citetitle>&BOOKID;</citetitle>."
 
-#: Feedback.xml:20(para)
+#. Tag: para
+#: Feedback.xml:20
+#, no-c-format
 msgid ""
 "If you have a suggestion for improving the documentation, try to be as "
 "specific as possible when describing it. If you have found an error, please "
 "include the section number and some of the surrounding text so we can find "
 "it easily."
 msgstr ""
-
-#. Put one translator per line, in the form of NAME <EMAIL>, YEAR1, YEAR2.
-#: Feedback.xml:0(None)
-msgid "translator-credits"
-msgstr ""
+"Если Вы хотите предложить улучшения руководства, постарайтесь описать "
+"предложения максимально подробно. Если Вы нашли ошибку, пожалуйста, укажите "
+"номер раздела и текст вокруг, чтобы мы могли её быстро найти."
