Update Bugzilla address in ru-RU
git-svn-id: file:///srv/svn/publican/trunk@963 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-redhat/ru-RU/Feedback.po
+++ b/publican-redhat/ru-RU/Feedback.po
@@ -37,14 +37,13 @@ msgstr "контактная информация по этому руковод
 msgid ""
 "If you find a typographical error in this manual, or if you have thought of "
 "a way to make this manual better, we would love to hear from you! Please "
-"submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/"
-"bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product "
+"submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product "
 "<application>&PRODUCT;.</application>"
 msgstr ""
 "Если Вы нашли опечатку в этом руководстве, или у Вас есть идеи, как его "
 "улучшить, мы будем рады выслушать Вас! Пожалуйста, оставьте сообщение в "
-"Bugzilla по адресу <ulink url=\"http://bugzilla.redhat.com/bugzilla/"
-"\">http://bugzilla.redhat.com/bugzilla/</ulink>, выбрав продукт "
+"Bugzilla по адресу <ulink url=\"http://bugzilla.redhat.com/"
+"\">http://bugzilla.redhat.com/</ulink>, выбрав продукт "
 "<application>&PRODUCT;.</application>"
 
 #. Tag: para
