Windows tweaks for 1.4 distribution
git-svn-id: file:///srv/svn/publican/trunk@1002 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/README
+++ b/publican/README
@@ -62,9 +62,8 @@ Windows
 TODO: deps
     Install NSIS http://nsis.sourceforge.net/Download
     Install http://nsis.sourceforge.net/Environmental_Variables:_append,_prepend,_and_remove_entries
-TODO: Detail where that goes
-    Download the DocBook DTD and expand it to the same dir publican is in
-    Download the DocBook XSL and expand it to the same dir publican is in
+    http://nsis.sourceforge.net/NsUnzip_plugin
+    
     cd publican
     perl Build.PL
     Build
@@ -79,7 +78,7 @@ TODO: Detail where that goes
     
 TODO: detail building xml2
 
-TODO: Complete deatils on uilding required LibXML and LibXSLT modules
+TODO: Complete deatils on building required LibXML and LibXSLT modules
 
     vcvars32.bat
 
